Creating Json file

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <meta property="og:title" content="My Course Homepage" />
+    <meta property="og:title" content="colorado Springs Chamber of Commerce Directory" />
     <meta property="og:type" content="Website" />
-    <meta property="og:url" content="https://nstod2.github.io/wdd230/chamber/index.html" />
+    <meta property="og:url" content="https://nstod2.github.io/wdd230/chamber/directory.html" />
     <meta property="og:image" content="https://media.timeout.com/images/105231037/750/422/image.jpg" />
 </head>
 <body>
@@ -37,7 +37,9 @@
         </ul>
     </nav>
     <main>
-        <h1>Colorado Springs Commerce Directory</h1>
+        <div class="page-titles">
+            <h1>Colorado Springs Commerce Directory</h1>
+        </div>
         <div id="directory-info">
 
         </div>
