--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -36,12 +36,14 @@
         <ul class="navigation">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="discover.html">Discover</a></li>
-            <li><a href="">Directory</a></li>
+            <li><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
     <main>
-        <h1 id="discover">Discover Colorado Springs Chamber of Commerce</h1>
+        <div class="page-titles">
+            <h1>Discover Colorado Springs Chamber of Commerce</h1>
+        </div>
         <div id="grid1">
             <div id="attcard">
                 <h2>Colorado Springs Attractions</h2>
