--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
         <ul class="navigation">
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="discover.html">Discover</a></li>
-            <li><a href="">Directory</a></li>
+            <li><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
         </ul>
     </nav>
@@ -44,6 +44,8 @@
                 <img src="images/colorado-springs-large.webp" alt="Colorado Springs">
             </picture>
             <span class="joinus">Join Now</span>
+        </div>
+        <div class="page-titles">
             <h1>Colorado Springs Chamber of Commerce</h1>
         </div>
         <div id="parent1">
