--- a/chamber/join.html
+++ b/chamber/join.html
@@ -36,12 +36,14 @@
         <ul class="navigation">
             <li><a href="index.html">Home</a></li>
             <li><a href="discover.html">Discover</a></li>
-            <li><a href="">Directory</a></li>
+            <li><a href="directory.html">Directory</a></li>
             <li class="active"><a href="join.html">Join</a></li>
         </ul>
     </nav>
     <main>
-        <h1 id="formheading">Colorado Springs Chamber Membership Levels</h1>
+        <div class="page-titles">
+            <h1>Colorado Springs Chamber Membership Levels</h1>
+        </div>
         <div id="formbox">
             <form method="get" action="thankyou.html">
                 <fieldset>
@@ -61,7 +63,8 @@
                     <label class="above">Organization Description </label>
                     <textarea name="desc" id="desc" rows="4" cols="50"></textarea>
                     <div>Membership Level</div>
-                    <label class="left"><input type="radio" name="membership" value="nonprofit">Nonprofit Membership</label>
+                    <label class="left"><input type="radio" name="membership" value="nonprofit">Nonprofit
+                        Membership</label>
                     <label class="left"><input type="radio" name="membership" value="bronze">Bronze Membership</label>
                     <label class="left"><input type="radio" name="membership" value="silver">Silver Membership</label>
                     <label class="left"><input type="radio" name="membership" value="gold">Gold Membership</label>
