--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -40,7 +40,11 @@
         <div class="page-titles">
             <h1>Colorado Springs Commerce Directory</h1>
         </div>
-        <div id="directory-info">
+        <div id="toggle">
+            <button id="grid"><img src="images/grid.webp" alt="grid" width="36" height="36"></button>
+            <button id="list"><img src="images/list.webp" alt="list" width="36" height="36"></button>
+        </div>
+        <div class="grid">
 
         </div>
         
