--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <img src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
+        <img class="cslogo" src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
         <div id="header">
             <span>Colorado Springs</span>
             <span>Chamber of Commerce</span>
@@ -41,8 +41,8 @@
             <h1>Colorado Springs Commerce Directory</h1>
         </div>
         <div id="toggle">
-            <button id="grid"><img src="images/grid.webp" alt="grid" width="36" height="36"></button>
-            <button id="list"><img src="images/list.webp" alt="list" width="36" height="36"></button>
+            <button id="grid"><img class="btn" src="images/grid.webp" alt="grid" ></button>
+            <button id="list"><img class="btn" src="images/list.webp" alt="list" ></button>
         </div>
         <div class="grid">
 
@@ -52,7 +52,7 @@
     <footer>
         <div class="information">
             <div class="footlogo">
-                <img src="images/cslogo.png" alt="Logo">
+                <img class="cslogo" src="images/cslogo.png" alt="Logo">
             </div>
             <div class="address">
                 <h3>Colorado Springs</h3>
@@ -77,5 +77,6 @@
 
     </footer>
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/directory.js"></script>
 </body>
 </html>
