--- a/chamber/join.html
+++ b/chamber/join.html
@@ -24,7 +24,7 @@
 
 <body>
     <header>
-        <img src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
+        <img class="cslogo" src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
         <div id="header">
             <span>Colorado Springs</span>
             <span>Chamber of Commerce</span>
@@ -113,7 +113,7 @@
     <footer>
         <div class="information">
             <div class="footlogo">
-                <img src="images/cslogo.png" alt="Logo">
+                <img class="cslogo" src="images/cslogo.png" alt="Logo">
             </div>
             <div class="address">
                 <h3>Colorado Springs</h3>
