--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <header>
-        <img src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
+        <img class="cslogo" src="images/cslogo.png" alt="Colorado Springs Commerce Logo">
         <div id="header">
             <span>Colorado Springs</span>
             <span>Chamber of Commerce</span>
@@ -88,7 +88,7 @@
     <footer>
         <div class="information">
             <div class="footlogo">
-                <img src="images/cslogo.png" alt="Logo">
+                <img class="cslogo" src="images/cslogo.png" alt="Logo">
             </div>
             <div class="address">
                 <h3>Colorado Springs</h3>
