--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colorado Springs Chamber of Commerce Directory</title>
-    <meta name="description" content="Nancy Stoddart's course assigment portal for WDD 230 - Web FrontEnd Development.">
+    <meta name="description" content="Nancy Stoddart's chamber directory assigment for WDD 230 - Web FrontEnd Development.">
     <meta name="author" content="Nancy Stoddart">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
