--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -131,11 +131,11 @@
             </div>
         </div>
         <p class="bottom">
-            <span id="copyright"></span>
+            <span class="copyright"></span>
             <span> CS Chamber </span>
             <span>| Nancy Stoddart | </span>
             <span>WDD 230 Project | </span>
-            <span id="lastModified"></span>
+            <span class="lastModified"></span>
         </p>
 
 
