--- a/chamber/index.html
+++ b/chamber/index.html
@@ -57,8 +57,9 @@
             <section class="weathercard">
                 <h2>Weather</h2>
                 <p>Colorado Springs, CO</p>
-                <p>Temperature</p>
-                <p>Forecast</p>
+                <p id="wtoday"></p>
+                <p id="wtomorrow"></p>
+                <p id="wnextday"></p>
             </section>
         </div>
         <div id="parent2">
@@ -103,15 +104,16 @@
             </div>        
         </div>
         <p class="bottom">
-            <span id="copyright"></span>  
+            <span class="copyright"></span>  
             <span> CS Chamber </span>
             <span>| Nancy Stoddart | </span>
             <span>WDD 230 Project | </span>
-            <span id="lastModified"></span>
+            <span class="lastModified"></span>
         </p>
         
 
     </footer>
     <script src="scripts/chamber.js"></script>
+    <script src="scripts/weather.js"></script>
 </body>
 </html>
