Weather on chamber page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,14 +52,21 @@
             <section class="eventcard">
                 <h2>Events</h2>
                 <h3>Business Networking Tips and Tricks Seminar</h3>
-                <p>Come join us and learn how to grow your business with networking knowledge, tips and opportunities this Wednesday, February 21st at 5:00 pm. </p>
+                <p>Come join us and learn how to grow your business with networking knowledge, tips and opportunities this Wednesday, February 21st at 5:00 pm. Your business will thank you!</p>
             </section>
             <section class="weathercard">
                 <h2>Weather</h2>
-                <p>Colorado Springs, CO</p>
-                <p id="wtoday"></p>
-                <p id="wtomorrow"></p>
-                <p id="wnextday"></p>
+                <h4>Colorado Springs, CO</h4>
+                <div>
+                    <p>Today's temp: <span id="temptoday"></span></p>
+                    <p><span id="todaydesc"></span><img id="todayicon" src="" alt=""></p>
+                </div>
+                <div class="threeday">
+                    <h4>3-Day Forecast</h4>
+                    <p>Day 1 - <span id="temp1"></span><span id="desc1"></span><img id="icon1" src="" alt=""></p>
+                    <p>Day 2 - <span id="temp2"></span><span id="desc2"></span><img id="icon2" src="" alt=""></p>
+                    <p>Day 3 -<span id="temp3"></span><span id="desc3"></span><img id="icon3" src="" alt=""></p>
+                </div>
             </section>
         </div>
         <div id="parent2">
@@ -94,12 +101,12 @@
             <div class="address">
                 <h3>Colorado Springs</h3>
                 <h3>Chamber of Commerce</h3>
-                <p>Street Address</p>
-                <p>City, State Zipcode</p>
+                <p>1832 Colorado Street</p>
+                <p>Colorado Springs, CO 80908</p>
             </div>
             <div class="contact">
-                <p>Email</p>
-                <p>Phone number</p>
+                <p>cschamber@commerce.org</p>
+                <p>(719)598-1234</p>
                 <p>Location Map</p>
             </div>        
         </div>
