--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,9 +63,9 @@
                 </div>
                 <div class="threeday">
                     <h4>3-Day Forecast</h4>
-                    <p>Day 1 - <span id="temp1"></span><span id="desc1"></span><img id="icon1" src="" alt=""></p>
-                    <p>Day 2 - <span id="temp2"></span><span id="desc2"></span><img id="icon2" src="" alt=""></p>
-                    <p>Day 3 -<span id="temp3"></span><span id="desc3"></span><img id="icon3" src="" alt=""></p>
+                    <p>Day 1 - <span id="temp1"></span><span id="desc1"></span><img id="icon1" src="images" alt=""></p>
+                    <p>Day 2 - <span id="temp2"></span><span id="desc2"></span><img id="icon2" src="images" alt=""></p>
+                    <p>Day 3 -<span id="temp3"></span><span id="desc3"></span><img id="icon3" src="images" alt=""></p>
                 </div>
             </section>
         </div>
