--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,7 @@
                 <h4>Colorado Springs, CO</h4>
                 <div>
                     <p>Today's temp: <span id="temptoday"></span></p>
-                    <p><span id="todaydesc"></span><img id="todayicon" src="" alt=""></p>
+                    <p><span id="todaydesc"></span><img id="todayicon" src="images" alt=""></p>
                 </div>
                 <div class="threeday">
                     <h4>3-Day Forecast</h4>
