--- a/chamber/index.html
+++ b/chamber/index.html
@@ -44,6 +44,7 @@
                 <img src="images/colorado-springs-large.webp" alt="Colorado Springs">
             </picture>
             <span class="joinus">Join Now</span>
+            <span class="meeting"></span>
         </div>
         <div class="page-titles">
             <h1>Colorado Springs Chamber of Commerce</h1>
