--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <img src="images/large-bountiful.webp" alt="Bountiful temple">
             </picture>
             <span>Bountiful Temple</span>
+            <span id="mgreet"></span>
         </div>
         <h1>WDD 230: Web Frontend Development</h1>
         <div id="parent">
